--- a/ClinicaWeb/JyGDreams/templates/add_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/add_patient.html
@@ -99,8 +99,7 @@ document.addEventListener('DOMContentLoaded', function() {
   Swal.fire({
     icon: 'success',
     title: '{% for message in messages %}{{ message }}{% endfor %}',
-    showConfirmButton: false,
-    timer: 2000
+    showConfirmButton: true,
   });
 </script>
 {% endif %}
