--- a/ClinicaWeb/JyGDreams/templates/tabla_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/tabla_patient.html
@@ -90,8 +90,7 @@
   Swal.fire({
     icon: 'success',
     title: '{% for message in messages %}{{ message }}{% endfor %}',
-    showConfirmButton: false,
-    timer: 2000
+    showConfirmButton: true,
   });
 </script>
 {% endif %}
