--- a/ClinicaWeb/JyGDreams/templates/add_cita.html
+++ b/ClinicaWeb/JyGDreams/templates/add_cita.html
@@ -132,8 +132,7 @@ document.addEventListener('DOMContentLoaded', function() {
   Swal.fire({
     icon: 'success',
     title: '{% for message in messages %}{{ message }}{% endfor %}',
-    showConfirmButton: false,
-    timer: 2000
+    showConfirmButton: true,
   });
 </script>
 {% endif %}
