--- a/ClinicaWeb/JyGDreams/templates/detail_pago.html
+++ b/ClinicaWeb/JyGDreams/templates/detail_pago.html
@@ -45,4 +45,16 @@
     </div>
   </div>
 </div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% if messages %}
+<script>
+  Swal.fire({
+    icon: 'success',
+    title: '{% for message in messages %}{{ message }}{% endfor %}',
+    showConfirmButton: true,
+  });
+</script>
+{% endif %}
 {% endblock %}
