--- a/ClinicaWeb/JyGDreams/templates/edit_cita.html
+++ b/ClinicaWeb/JyGDreams/templates/edit_cita.html
@@ -103,8 +103,7 @@
   Swal.fire({
     icon: 'success',
     title: '{% for message in messages %}{{ message }}{% endfor %}',
-    showConfirmButton: false,
-    timer: 2000
+    showConfirmButton: true,
   });
 </script>
 {% endif %}
