--- a/ClinicaWeb/JyGDreams/templates/edit_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/edit_patient.html
@@ -71,8 +71,7 @@
   Swal.fire({
     icon: 'success',
     title: '{% for message in messages %}{{ message }}{% endfor %}',
-    showConfirmButton: false,
-    timer: 2000
+    showConfirmButton: true,
   });
 </script>
 {% endif %}
