--- a/ClinicaWeb/JyGDreams/templates/home_citas.html
+++ b/ClinicaWeb/JyGDreams/templates/home_citas.html
@@ -49,8 +49,7 @@
   Swal.fire({
     icon: 'success',
     title: '{% for message in messages %}{{ message }}{% endfor %}',
-    showConfirmButton: false,
-    timer: 2000
+    showConfirmButton: true,
   });
 </script>
 {% endif %}
