iniciando validaciones de campos vacios (en proceso)

--- a/ClinicaWeb/JyGDreams/templates/add_cita.html
+++ b/ClinicaWeb/JyGDreams/templates/add_cita.html
@@ -114,6 +114,8 @@ document.addEventListener('DOMContentLoaded', function() {
         title: 'Registro de Cita',
         text: '¿Deseas registrar la cita?',
         icon: 'question',
+        confirmButtonColor: '#198754',
+        cancelButtonColor: '#d33',
         showCancelButton: true,
         confirmButtonText: 'Sí, registrar',
         cancelButtonText: 'Cancelar'
