--- a/ClinicaWeb/JyGDreams/templates/add_pago.html
+++ b/ClinicaWeb/JyGDreams/templates/add_pago.html
@@ -59,6 +59,8 @@ document.addEventListener('DOMContentLoaded', function() {
         text: '¿Deseas registrar el pago?',
         icon: 'question',
         showCancelButton: true,
+        confirmButtonColor: '#198754',
+        cancelButtonColor: '#d33',
         confirmButtonText: 'Sí, registrar',
         cancelButtonText: 'Cancelar'
       }).then((result) => {
