--- a/ClinicaWeb/JyGDreams/templates/add_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/add_patient.html
@@ -82,6 +82,8 @@ document.addEventListener('DOMContentLoaded', function() {
         text: '¿Deseas guardar el paciente?',
         icon: 'question',
         showCancelButton: true,
+        confirmButtonColor: '#198754',
+        cancelButtonColor: '#d33',
         confirmButtonText: 'Sí, guardar',
         cancelButtonText: 'Cancelar'
       }).then((result) => {
