--- a/ClinicaWeb/JyGDreams/templates/add_expediente.html
+++ b/ClinicaWeb/JyGDreams/templates/add_expediente.html
@@ -174,6 +174,8 @@ document.addEventListener('DOMContentLoaded', function() {
         text: '¿Deseas guardar el expediente?',
         icon: 'question',
         showCancelButton: true,
+        confirmButtonColor: '#198754',
+        cancelButtonColor: '#d33',
         confirmButtonText: 'Sí, guardar',
         cancelButtonText: 'Cancelar'
       }).then((result) => {
