--- a/ClinicaWeb/JyGDreams/templates/index.html
+++ b/ClinicaWeb/JyGDreams/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% load static %}
 
-{% block title %}Dashboard - Sistema Médico{% endblock %}
+{% block title %}Central - JyGDreams{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'JyGDreams/index.css' %}">
