Intentando Despliegue (Here we go again)

--- a/ClinicaWeb/JyGDreams/templates/tabla_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/tabla_patient.html
@@ -10,7 +10,7 @@
 <div class="container py-5">
   <h2 class="text-center mb-5 title"><i class="bi bi-person-fill me-2"></i>Lista de Pacientes</h2>
 
-  <!-- Barra de búsqueda -->
+  <!-- Barra de búsqueda ddd -->
   <form method="get" class="mb-4 p-4 rounded shadow-sm search-bar-custom" autocomplete="off" style="max-width:900px; margin:auto;">
     <div class="row g-3 align-items-end">
       <div class="col-md-8">
